Seperation of URL and URI first part