@@ -12,77 +12,76 @@
  */
 package org.assertj.core.api;
 
-import org.assertj.core.internal.Urls;
+import org.assertj.core.internal.Uris;
 import org.assertj.core.util.VisibleForTesting;
 
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.net.URI;
 
 /**
- * Base class for all implementations of assertions for {@link URL}s.
+ * Base class for all implementations of assertions for {@link URI}s.
  *
  * @param <S> the "self" type of this assertion class. Please read &quot;<a href="http://bit.ly/anMa4g"
  *          target="_blank">Emulating 'self types' using Java Generics to simplify fluent API implementation</a>&quot;
  *          for more details.
  *
- * @see java.net.URL
+ * @see java.net.URI
  *
  * @author Alexander Bischof
  */
-public abstract class AbstractUrlAssert<S extends AbstractUrlAssert<S>> extends AbstractAssert<S, URL> {
+public abstract class AbstractUriAssert<S extends AbstractUriAssert<S>> extends AbstractAssert<S, URI> {
 
   @VisibleForTesting
-  protected Urls urls = Urls.instance();
+  protected Uris uris = Uris.instance();
 
-  protected AbstractUrlAssert(final URL actual, final Class<?> selfType) {
+  protected AbstractUriAssert(final URI actual, final Class<?> selfType) {
 	super(actual, selfType);
   }
 
   /**
-   * Verifies that the actual {@code URL} has the expected scheme.
+   * Verifies that the actual {@code URI} has the expected scheme.
    * <p>
    * This assertion will succeed:
    *
    * <pre><code class='java'>
-   * assertThat(new URL("http://helloworld.org")).hasScheme("http")
+   * assertThat(new URI("http://helloworld.org")).hasScheme("http")
    * </code></pre>
    *
    * Whereas this assertion will fail:
    *
    * <pre><code class='java'>
-   * assertThat(new URL("ftp://helloworld.org")).hasScheme("http")
+   * assertThat(new URI("ftp://helloworld.org")).hasScheme("http")
    * </code></pre>
    *
-   * @param expected the expected scheme of the actual {@code URL}.
+   * @param expected the expected scheme of the actual {@code URI}.
    * @return {@code this} assertion object.
    * @throws AssertionError if the actual scheme is not equal to the expected scheme.
    */
   public S hasScheme(String expected) {
-	urls.assertHasScheme(info, actual, expected);
+	uris.assertHasScheme(info, actual, expected);
 	return myself;
   }
 
   /**
-   * Verifies that the actual {@code URL} has the expected path.
+   * Verifies that the actual {@code URI} has the expected path.
    * <p>
    * This assertion will succeed:
    *
    * <pre><code class='java'>
-   * assertThat(new URL("http://helloworld.org/pages")).hasPath("/pages/")
+   * assertThat(new URI("http://helloworld.org/pages")).hasPath("/pages/")
    * </code></pre>
    *
    * Whereas this assertion will fail:
    *
    * <pre><code class='java'>
-   * assertThat(new URL("http://helloworld.org/pickme")).hasPath("/pages/")
+   * assertThat(new URI("http://helloworld.org/pickme")).hasPath("/pages/")
    * </code></pre>
    *
-   * @param expected the expected path of the actual {@code URL}.
+   * @param expected the expected path of the actual {@code URI}.
    * @return {@code this} assertion object.
    * @throws AssertionError if the actual path is not equal to the expected path.
    */
   public S hasPath(String expected) {
-      urls.assertHasPath(info, actual, expected);
+      uris.assertHasPath(info, actual, expected);
       return myself;
   }
 }
